Mon Jun 21 09:44:25 BST 2004   v0.22

Initial release. This is based on some code by Simon Wistow
and then bashed into a more usuable and general form by 
Adam Spiers. 

It was largely done to attempt to find sequences of files so
it may still have the odd anachronism because of that.



